RESOLVED FIXED45628
[WML] Fix build breaks when WML is enabled
https://bugs.webkit.org/show_bug.cgi?id=45628
Summary [WML] Fix build breaks when WML is enabled
Gyuyoung Kim
Reported 2010-09-12 19:32:13 PDT
There are build breaks when WML is enabled.
Attachments
Patch (1.84 KB, patch)
2010-09-12 19:34 PDT, Gyuyoung Kim
krit: review-
krit: commit-queue-
Patch (2.08 KB, patch)
2010-09-13 00:40 PDT, Gyuyoung Kim
tkent: review-
Patch (2.10 KB, patch)
2010-09-13 01:32 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2010-09-12 19:34:44 PDT
Dirk Schulze
Comment 2 2010-09-12 23:41:55 PDT
Comment on attachment 67354 [details] Patch How can r67355 be responsible for your build breakage? It's a qt only change in the patch. Give more details in the ChangeLog. What breaks the WML build, how do you fixed it and so on.
Gyuyoung Kim
Comment 3 2010-09-13 00:40:00 PDT
Created attachment 67371 [details] Patch Sorry for my poor expression in my patch. When wml is enabled, there are build breaks as below, ====================================================================================================== /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLAElement.cpp: In member function ‘virtual void WebCore::WMLAElement::defaultEventHandler(WebCore::Event*)’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLAElement.cpp:131: error: cannot convert ‘WebCore::Document*’ to ‘WebCore::Event*’ for argument ‘1’ to ‘void WebCore::handleLinkClick(WebCore::Event*, WebCore::Document*, const WTF::String&, const WTF::String&, bool)’ /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp: In member function ‘virtual void WebCore::WMLInputElement::defaultEventHandler(WebCore::Event*)’: /home/gyuyoung/webkit/WebKit-git/WebCore/wml/WMLInputElement.cpp:277: error: ‘class WebCore::Frame’ has no member named ‘doTextFieldCommandFromEvent’ make[2]: *** [WebCore/CMakeFiles/webcore_efl.dir/wml/WMLAElement.cpp.o] Error 1 ====================================================================================================== So, I make a patch for this build breaks. I add more comments in Changelog. :) Thank you.
Kent Tamura
Comment 4 2010-09-13 01:19:26 PDT
Comment on attachment 67371 [details] Patch > diff --git a/WebCore/ChangeLog b/WebCore/ChangeLog > index 05912d0..5b61a98 100644 > --- a/WebCore/ChangeLog > +++ b/WebCore/ChangeLog > @@ -1,3 +1,19 @@ > +2010-09-12 Gyuyoung Kim <gyuyoung.kim@samsung.com> > + > + Reviewed by NOBODY (OOPS!). > + > + [WML] Fix a build break R67355 This description is confusing. This sounds like r67355 caused a WML build break. Actually http://trac.webkit.org/changeset/67262 caused it, right?
Gyuyoung Kim
Comment 5 2010-09-13 01:32:10 PDT
Created attachment 67374 [details] Patch Oops, my mistake. I modify Changelog again. If there are still wrong expression, please let me know. Thank you.
WebKit Commit Bot
Comment 6 2010-09-13 10:22:17 PDT
Comment on attachment 67374 [details] Patch Clearing flags on attachment: 67374 Committed r67395: <http://trac.webkit.org/changeset/67395>
WebKit Commit Bot
Comment 7 2010-09-13 10:22:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.