2010-09-13  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Darin Adler.

        [WML] Fix build breaks when WML is enabled
        https://bugs.webkit.org/show_bug.cgi?id=45628

        There are build breaks by Bug 22382 when WML is enabled. The handleLinkClick() has an event parameter.
        So, we need to set an event when wml invoke the handleLinkClick(). And, doTextFieldCommandFromEvent()
        was moved to editor. So, we need to mofidy the invocation in WMLInputElement.cpp

        * wml/WMLAElement.cpp:
        (WebCore::WMLAElement::defaultEventHandler):
        * wml/WMLInputElement.cpp:
        (WebCore::WMLInputElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/58127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67395 268f45cc-cd09-0410-ab3c-d52691b4dbfc